<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Epicure</string>
    <string name="action_settings">Settings</string>
    <string name="enter_member_number">Membership ID</string>
    <string name="password">Password</string>
    <string name="newpassword"> New Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="new_user">No account yet? Create one</string>
    <string name="submit">Submit</string>
    <string name="already_register">Already Register ?</string>
    <string name="name">Name</string>
    <string name="enter_name">Name</string>
    <string name="enter_mobile_number">Mobile Number</string>
    <string name="enter_email_id">Email ID</string>
    <string name="enter_dob">DOB</string>
    <string name="enter_anniversary_date">Anniversary Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="add_photo">Add Photo</string>
    <string name="_00">00</string>
    <string name="past_coupons">Past Coupons</string>
    <string name="future_bookings">Future Bookings</string>
    <string name="future_coupons">Future Coupons</string>
    <string name="past_stays">Past stays</string>
    <string name="past_ratings_and_reviews">ratings and reviews</string>
    <string name="transaction_history">Transaction History</string>
    <string name="about_us">About us</string>
    <string name="profile">Edit Profile</string>
    <string name="membership_id">MEMBERSHIP ID - </string>
    <string name="sandesh_ivitesse_india_from_pune">SANDESH IVITESSE INDIA FROM PUNE</string>
    <string name="action_info">View Photo</string>
    <string name="action_photo">View Info</string>
    <string name="membership_type">MEMBERSHIP TYPE</string>
    <string name="gold">Gold</string>
    <string name="member_name">Member Name -</string>
    <string name="validity">Validity -</string>
    <string name="show_your_card_to_receive_your_offers_and_discounts_n_n_visit_www_google_com_for_the_latest_list_of_partners_and_retailers">Show your card to receive your offers and discounts.   Visit www.google.com for the latest list of partners and retailers.</string>
    <string name="no_signature_required">No Signature required.</string>
    <string name="logout">Logout</string>
    <string name="_0000000000">0000000000</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="no_data">No Data</string>
    <string name="enter_address">Address</string>
    <string name="no_internet_connection">No Internet Connection Available !!!.\n Please check network connection of your device!!!</string>
    <string name="retry">Retry</string>
    <string name="see_details">See details</string>
    <string name="add_review">Add Review</string>
    <string name="title_max_20_words">Title(Max 20 Words)</string>
    <string name="write_review">Write Review</string>
    <string name="add_new_booking">Add New Booking</string>
    <string name="search_hotels">Search Hotel</string>
    <string name="search">Search</string>
    <string name="trending_now">Trending Now</string>
    <string name="packages">Packages</string>
    <string name="guests">Guests</string>
    <string name="dashboard">Dashboard</string>
    <string name="select_your_hotel">Select your hotel</string>
    <string name="amenities">Amenities</string>
    <string name="policies">Policies</string>
    <string name="photos">Show Photos</string>
    <string name="pay_after_reach_at_hotel">Pay After reach at hotel.</string>
    <string name="pay_now">Pay Now</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="check_out">CHECK-OUT</string>
    <string name="check_in">CHECK-IN</string>
    <string name="city_area_or_hotel">CITY, AREA OR HOTEL</string>
    <string name="please_check_your_details">Please check your details</string>
    <string name="hey_shanky">Hey Shanky!</string>
    <string name="rooms">Rooms</string>
    <string name="history">History</string>
    <string name="no_record_found">NO RECORD FOUND</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="you_have_win_5_off_in_next_booking">YOU HAVE WIN 5 % OFF IN NEXT BOOKING.</string>
    <string name="reviews">Reviews</string>
    <string name="book_now">Book Now</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="occasion">occasion</string>
    <string name="date">DATE</string>
    <string name="downloading">Loading</string>
    <string name="touch_to_start">Start</string>
    <string name="title_activity_offer__details_coupons">Offer_Details_coupons</string>
    <string name="large_text" tools:ignore="TypographyQuotes">"Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="register">Register</string>
    <string name="sort_filter">Sort/Filter</string>
    <string name="close">Close</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="saved_amount">saved amount</string>
    <string name="used_amount">Used amount</string>
    <string name="Rs">\u20B9 . </string>
</resources>
