<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/colorAccent"
            android:padding="@dimen/_15sdp"
            android:text="@string/change_password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/newpassword"
            app:counterMaxLength="25">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:ems="10"
                android:fontFamily="@font/montserrat_bold"
                android:inputType="textPassword"
                android:maxLength="25"
                android:textSize="@dimen/_10ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"

            android:hint="@string/confirm_new_password"
            app:counterMaxLength="25">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/c_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:ems="10"
                android:fontFamily="@font/montserrat_bold"
                android:inputType="textPassword"
                android:maxLength="25"
                android:textSize="@dimen/_10ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/update" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>