<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_hide" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hotel_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/hey_shanky"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="32sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/please_check_your_details"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-44dp"
                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/mobile_number"
                            android:inputType="number"
                            android:maxLines="1"
                            android:text="@string/_0000000000"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/city_area_or_hotel"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="The Orchid Hotel, Hinjewadi, Pune"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/check_in"
                            android:inputType="date"
                            android:maxLines="1"
                            android:text="12 MAY 2019"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/check_out"
                            android:inputType="date"
                            android:maxLines="1"
                            android:text="15 MAY 2019"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/guests"
                            android:inputType="number"
                            android:maxLines="1"
                            android:text="3"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--  <com.google.android.material.textfield.TextInputLayout
                          style="@style/TextInputLayout"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                          <com.google.android.material.textfield.TextInputEditText
                              android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:hint="@string/rooms"
                              android:inputType="number"
                              android:maxLines="1"
                              android:text="3"
                              android:textColor="@android:color/black"
                              android:textSize="16sp" />
                      </com.google.android.material.textfield.TextInputLayout>
  -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:checked="true"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/pay_now"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            tools:targetApi="lollipop" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/pay_after_reach_at_hotel"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            tools:targetApi="lollipop" />
                    </RadioGroup>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/book_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_button_drawable"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/confirm_booking"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>