<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.Login_Activity">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Buttonsmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_id"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_bold"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_12sdp" />

                <requestFocus />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_submit"
                style="@style/Buttonsmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="forgotaccess"
                android:text="@string/submit" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>