<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">


    <include layout="@layout/toolbar_hide" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hotel_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/hey_shanky"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Where you want to Stay."
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="-100dp"
                android:layout_marginRight="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/_5sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:hint="@string/search_hotels">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_search"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/search_buses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="0.7"
                        android:text="@string/search"
                        android:textSize="@dimen/_10ssp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_25"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center|start"
                android:text="@string/trending_now"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_18ssp" />

            <!--Trending Now-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center|start"
                android:text="@string/packages"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_18ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>